// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RankingChart Component check loading 1`] = `
<div>
  <div
    class="rankingChart"
  >
    <div
      class="loading"
    >
      <span
        class="css-1n5ab60"
      >
        <span
          class="css-hajlmr"
        />
        <span
          class="css-vrt42o"
        />
      </span>
      ;
    </div>
  </div>
</div>
`;

exports[`RankingChart Component error task 1`] = `
<div>
  <div
    class="rankingChart"
  >
    <div
      class="error"
    >
      Error
      <img
        alt="not-found"
        src="https://www.pngitem.com/pimgs/m/561-5616833_image-not-found-png-not-found-404-png.png"
      />
    </div>
  </div>
</div>
`;

exports[`RankingChart Component success task 1`] = `
<div>
  <div
    class="rankingChart"
  >
    <canvas
      height="150"
      role="img"
      width="300"
    />
  </div>
</div>
`;
